web site fininsh

--- a/index.html
+++ b/index.html
@@ -11,17 +11,47 @@
     <title>Mr.Ok</title>
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="width-left">
             <h1>Welcome To</h1>
-            <h1><span class="nameHighLight">Rokibul's</span> Website</h1>
-            <h3>World class porfessional web developer</h3>
-            My name is Husain Muhammad Rokibul Islam Parves. I know it's a big name everybody says so. You can call me Rokibul or Parver. So this is my first protfolio website. I never practice web development this is my first time desiging websites. I'm a bigginer level developer. I have a goal to become a full stack web developer. I love travelling, hanging out with friends, learning new stuff.
+            <h1><span class="orangeHighLight">Rokibul's</span> Website</h1>
+            <h2>World class web developer</h3>
+            <p>My name is Husain Muhammad Rokibul Islam Parves. I know it's a big name everybody says so. You can call me Rokibul or Parver. So this is my first protfolio website. I'm a bigginer level developer. I have a goal to become a full stack web developer. I love travelling, hanging out with friends, learning new stuff.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/hm-rokibul-5a8551216/">Hire me</a>
         </div>
         <div class="width-left">
-            <img src="images\profile pic.png" alt="">
+            <img src="images/profile pic.png" alt="">
         </div>
     </section>
+    <section class="dream-banner">
+        <div class="width-left">
+            <img src="images/profile2.png" alt="">
+        </div>
+        <div class="width-left">
+            <h2>Dream Big</h2>
+            <h3>Become a web developer</h3>
+            <p>My name is Husain Muhammad Rokibul Islam Parves. I know it's a big name everybody says so. You can call me Rokibul or Parver. So this is my first protfolio website. I'm a bigginer level developer. I have a goal to become a full stack web developer. I love travelling, hanging out with friends, learning new stuff.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/hm-rokibul-5a8551216/">Download Resume</a>
+        </div>
+    </section>
+        <section class="experence-banner">
+            <h2>Experiences</h2>
+            <div class="width-left cardShadow" id="fullStackSideBorder">
+                <h2>Full Stack Web Dev</h2>
+                <h3 class="orangeHighLight">2021-present | Pro level web dev</h3>
+                <p>I'm a master of HTML, CSS & Javascrept. I know everything to make a simple website funtion, effecient. I didn't stop with web. I went beyond with most popular Javascrept
+                    frame work Vue.Js. I even know the deployment, server and security. I'll give you 100% web solution.
+                </p>
+            </div>
+
+            <div class="width-left cardShadow" id="babyStackSideBorder">
+                <h2>Baby web Dev</h2>
+                <h3 class="orangeHighLight">2020-2021 | Web Dev learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it and uploaded the content. It was fun working at porgramming hero.</p>
+            </div>
+        </section>
+
+        <footer> <p>All right are reserved.</p></footer>
     
 </body>
 </html>
